# kitti_odom_to_g2o

./: CMakeLists.txt  README.md  read_odom.cpp
